techhub/userservice/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice
  namespace: techhub
spec:
  selector:
    app: userservice
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
