techhub/userservice/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userservice-ingress
  namespace: techhub
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: techhub.local                   # ← add this to your /etc/hosts
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  number: 8080
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  number: 8080
